--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,23 @@ name = "rs-modbus-stm32-demo"
 version = "0.1.0"
 edition = "2018"
 license = "MIT/Apache-2.0"
-repository = "git@github.com:karlp/rs-modbus-stm32-demo.git"
+repository = "https://github.com/karlp/rs-modbus-stm32-demo"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cortex-m = "0.6"
+cortex-m-rt = "0.6"
+cortex-m-rtic = "0.5"
+embedded-hal = {version = "0.2.6", features = ["unproven"]}
+
+stm32l1xx-hal = { git = "https://github.com/stm32-rs/stm32l1xx-hal", features = ["stm32l151", "rt"]}
+
+# RTT is way better than semihosting, but I really want to move this to ITM!
+rtt-target = { version = "0.3.1", features = ["cortex-m"]}
+panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
+
+[profile.release]
+codegen-units = 1 # better optimizations
+debug = true # symbols are nice and they don't increase the size on Flash
+lto = true # better optimizations
