--- a/.cargo/config
+++ b/.cargo/config
@@ -1,7 +1,7 @@
 
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
 #runner = "arm-none-eabi-gdb -q"
-runner = "probe-run --chip stm32l151c8"
+runner = "probe-run --chip stm32l151c8xxa"
 
 rustflags = [
   "-C", "link-arg=-Tlink.x",
